# clinical-notes-icd10-llm-finetune

./: .env.example  .gitignore  .pre-commit-config.yaml  generate_multi_profile_notes.py  pyproject.toml  requirements.txt
clinical_note_generation/: __init__.py  pipeline.py
clinical_note_generation/clients/: __init__.py  gemini_client.py  llm_client.py  openai_client.py
clinical_note_generation/core/: __init__.py  config.py  constants.py  enums.py  exceptions.py  models.py
clinical_note_generation/data/: README.md
clinical_note_generation/generation/: __init__.py  note_generator.py  prompt_builder.py
clinical_note_generation/repository/: __init__.py  icd10_repository.py
clinical_note_generation/selection/: __init__.py  code_selector.py  strategies.py
clinical_note_generation/validation/: __init__.py  note_validator.py
data_generation/: .env.example  __init__.py  generate_clinical_notes.py
data_generation/clients/: __init__.py  gemini_api_client.py  openai_api_client.py
data_generation/core/: __init__.py  configuration.py  data_models.py  enums.py
data_generation/generators/: __init__.py  clinical_notes_generator.py
data_generation/managers/: __init__.py  icd10_dataset_manager.py
data_generation/prompts/: __init__.py  generate_clinical_note_prompt.py  validation_prompt.py
data_generation/utils/: __init__.py  file_operations.py
icd10_fine_tune/: README.md  __init__.py
icd10_fine_tune/config/: __init__.py  model_registry.py  settings.py
icd10_fine_tune/data/: __init__.py  format_validator.py  formatter.py  loader.py
icd10_fine_tune/evaluation/: evidently_reporter.py  inference.py
icd10_fine_tune/observability/: logger.py
icd10_fine_tune/scripts/: evaluate.py  prepare_data.py  train.py
icd10_fine_tune/training/: model_loader.py  trainer.py
